2005-08-21  Christian Persch  <chpe@cvs.gnome.org>

	* src/bookmarks/ephy-topic-action.c:
	(ephy_topic_action_sync_label):

	Use strlen, not hardcoded length.

2005-08-21  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-tab.c: (ephy_tab_finalize):

	Fix mem leak.

2005-08-17  Christian Persch  <chpe@cvs.gnome.org>

	* embed/ephy-embed-persist.h:
	* embed/mozilla/mozilla-embed-persist.cpp:

	Add EPHY_EMBED_PERSIST_FROM_CACHE, and try harder to get a cache
	descriptor for the source URL.

	* src/popup-commands.c: (save_property_url),
	(popup_cmd_set_image_as_background), (save_temp_source):

	Use EPHY_EMBED_PERSIST_FROM_CACHE to try to get the content from
	cache when saving background, images or links. Part of bug #168554.

2005-08-17  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-tab.c: (ephy_tab_set_loading_title),

	Better fix: reorder again and use priv->title for
	the set_loading_title call after the set_title call.

2005-08-17  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EventContext.cpp:

	QI the element to check whether it's of some type,
	don't check the tag.

2005-08-17  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-tab.c: (ephy_tab_title_cb):

	Use ephy_tab_set_title after ephy_tab_set_loading_title
	because set_title consumes the char* argument!
	Fixes invalid UTF-8 warnings.

2005-08-17  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Fix --disable-focus-fix and --disable-psm configure args.

2005-08-16  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-find-toolbar.c: (entry_activate_cb),
	(ephy_find_toolbar_open):

	Only activate link in typeahead mode, not in Ctrl-F find mode.

2005-08-16  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyFind.cpp:

	Return TRUE if the event was consumed.

	* embed/mozilla/mozilla-embed-single.cpp:

	More redundant code.

2005-08-16  Christian Persch  <chpe@cvs.gnome.org>

	* embed/ephy-embed-find.c: (ephy_embed_find_activate_link):
	* embed/ephy-embed-find.h: